--- a/.github/workflows/check_cron.yaml
+++ b/.github/workflows/check_cron.yaml
@@ -35,4 +35,10 @@ jobs:
           chmod +x sshpass.sh
 
       - name: Execute SSH Commands
+
+            - name: 运行登录脚本
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          ACCOUNTS_JSON: ${{ secrets.ACCOUNTS_JSON }}
         run: ./sshpass.sh
